--- a/main.css
+++ b/main.css
@@ -39,4 +39,20 @@
 
 .center {
     text-align: center;
+    
+}
+
+
+
+#wrapper {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.center_text {
+display: flex;
+justify-content: center;
+padding: 4rem 30rem;
+font-size: 1.5rem;
 }
