--- a/main.css
+++ b/main.css
@@ -52,25 +52,18 @@
 
 .center_text {
 display: flex;
+flex-direction: row;
 justify-content: center;
 padding: 4rem 15rem;
 font-size: 1.5rem;
 }
 
 .card_resize {
-    width: 7rem;
-    height: 7rem;
+    width: 10rem;
+    height: 10rem;
 }
 
-.left_col {
-    display: flex;
-    flex-direction: column;
-
-    justify-content: left;
-}
-
-.right_col {
-    display: flex;
-    flex-direction: column;
-    justify-content: right;
+.center_flex{
+    justify-content: center;
+    align-items: center;
 }
