--- a/main.css
+++ b/main.css
@@ -7,10 +7,13 @@
 }
 
 * {
-    background: black;
+    
     color: white;
 }
 
+body {
+    background-image: url("images/background_img.jpg");
+  }
 
 .GoT {
     font-family: "GoT";
@@ -33,21 +36,108 @@
 display: flex;
 flex-direction: row;
 justify-content: center;
-padding: 4rem 15rem;
+padding: 2rem 15rem;
 font-size: 1.5rem;
 }
 
 .resize {
     width: 5rem;
-border-color: black;
+border-color: transparent;;
+background: none;
+cursor: pointer;
+}
+
+#compute {
+    cursor: pointer;
+    background: black;
+    border-radius: 5px;
 
 }
 
+#zodDate {
+    background: black;
+    border-radius: 5px;
+
+}
 
 .center_flex{
-    margin-top: 2rem;
-    margin-bottom: 4rem;
+    margin: 2rem 1rem 4rem 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+/* ALL STUFF BELOW FOR HELP POPUP */
+
+.push_right {
+    float: right;
+    margin: auto 3rem;
+    ;
+}
+
+/* Popup container */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid white;
+    padding: .2rem;
+    background: black;
+    border-radius: 5px;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
